# ov-seg

./: .gitignore  GETTING_STARTED.md  INSTALL.md  OVSEG_USAGE_GUIDE.md  README.md  demo.py  pyproject.toml  reconstruct_clip_masked_input.py  sitecustomize.py  temp.py  train_net.py  visualize_mask_prompt.py
datasets/: DATASETS.md  prepare_ade20k_full_sem_seg.py  prepare_ade20k_sem_seg.py  prepare_coco_stuff_sem_seg.py  prepare_pascal_context.py  prepare_voc_sem_seg.py
open_clip_training/: README.md
open_clip_training/tests/: test_simple.py
open_vocab_seg/data/: build.py
open_vocab_seg/evaluation/: generalized_sem_seg_evaluation.py
open_vocab_seg/modeling/clip_adapter/: adapter.py
open_vocab_seg/utils/: events.py  predictor.py
ov_seg.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
